# Lychee

./: .codecov.yml  .dockerignore  .editorconfig  .env.example  .env.homestead  .env.mariadb.travis  .env.postgresql.travis  .env.sqlite.travis  .env.travis  .gitattributes  .gitignore  .gitmodules  .php-cs-fixer.php  .php_cs  .phpstorm.meta.php  .pre-commit-config.yaml  .prettierrc.json  .styleci.yml  .travis.yml  .trivyignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  Dockerfile-demo  Dockerfile-legacy  LICENSE  Makefile  README.md  SECURITY.md  TODO.md  after.sh  aliases  codecov.sh  codecov.yml  composer.json  composer.travis.sh  developer-notes.md  docker-compose-pgsql.yaml  docker-compose.minimal.yaml  docker-compose.yaml  (+42 more)
.ai/: README.md
.fly/: entrypoint.sh
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  release.yml
ai-vision-service/: Dockerfile  README.md
ai-vision-service/face-recognition/: Dockerfile  README.md  pyproject.toml
ai-vision-service/face-recognition/app/: __init__.py  config.py  main.py
ai-vision-service/face-recognition/app/api/: __init__.py  dependencies.py  routes.py  schemas.py
ai-vision-service/face-recognition/app/clustering/: __init__.py  clusterer.py
ai-vision-service/face-recognition/app/detection/: __init__.py  cropper.py  detector.py
ai-vision-service/face-recognition/app/embeddings/: __init__.py  factory.py  pgvector_store.py  sqlite_store.py  store.py
ai-vision-service/face-recognition/app/matching/: __init__.py
ai-vision-service/face-recognition/tests/: conftest.py  test_api.py  test_clustering.py  test_cropper.py  test_detection.py  test_embeddings.py  test_matching.py  test_smoke.py
app/: Album.php  Configs.php  Helpers.php  Logs.php  Page.php  PageContent.php  Photo.php  Response.php  SomethingUseless.php  SymLink.php  User.php  Validate.php
bootstrap/: PanicAttack.php  app.php  cache  initialize.php  simple-errors.php
composer-cache/: .gitignore
config/: app.php  auth.php  broadcasting.php  cache.php  clockwork.php  cors.php  data.php  database.php  debugbar.php  defines.php  features.php  feed.php  filesystems.php  hashing.php  honeypot.php  image-optimizer.php  larapass.php  ldap.php  livewire.php  log-viewer.php  logging.php  mail.php  markdown.php  octane.php  omnipay.php  queue.php  scramble.php  secure-headers.php  services.php  session.php  trustedproxy.php  typescript-transformer.php  urls.php  view.php  (+2 more)
(+6835 files in other folders)
